# youtube_rag_bot

./: .env.example  .gitignore  README.md  bot.py  bot_aws.py  chunking.py  hybrid_search.py  local_watcher.py  pyproject.toml  rag_graph.py  requirements.txt  requirements_local.txt  reranker.py  router.py  s3_transcript_store.py  sqs_transcript_queue.py  test_vectorstore_aws.py
infra/: .dockerignore  AWS_DEPLOYMENT.md  Dockerfile.cloud
requirements/: aws.txt
src/app/bots/: bot_aws.py  bot_local.py
src/app/rag/: chunking.py  rag_graph.py  router.py
src/app/storage/: vectorstore_aws.py
src/app/watcher/: local_watcher.py
